--- a/index.html
+++ b/index.html
@@ -3,124 +3,159 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FuelMaster</title>
+    <meta name="description" content="FuelMaster — приложение для управления расходом топлива, отслеживания автомобилей и получения советов. Скачайте для Android и iOS!">
+    <meta name="keywords" content="FuelMaster, расход топлива, калькулятор, автомобили, Flutter, Android, iOS">
+    <meta name="author" content="maksimyugov89">
+    <link rel="manifest" href="manifest.json">
+    <title>FuelMaster - Калькулятор расхода топлива</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="dark">
-    <!-- Header -->
+<body>
     <header>
         <div class="container">
-            <h1 id="hero-title" data-i18n="hero-title">FuelMaster</h1>
-            <p id="hero-subtitle" data-i18n="hero-subtitle">Твой помощник в расчете топлива</p>
-            
-            <!-- Theme & Language Controls -->
-            <div class="controls">
-                <button id="theme-toggle">
-                    <span id="theme-text"></span>
-                </button>
-                <select id="language-toggle">
-                    <option value="ru">RU</option>
-                    <option value="en">EN</option>
-                </select>
+            <div class="header-content">
+                <h1 class="brand-title">FuelMaster</h1>
+                <div class="header-utils">
+                    <div class="weather-info" id="weather-info">
+                        <i class="fas fa-cloud"></i> 11°C, Курск <i class="fas fa-arrow-down"></i> 760 мм
+                    </div>
+                    <select id="language-toggle">
+                        <option value="ru">RU</option>
+                        <option value="en">EN</option>
+                    </select>
+                    <button id="theme-toggle" aria-label="Переключить тему">
+                        <span id="theme-text" data-i18n="themeLight">Светлая</span>
+                    </button>
+                </div>
             </div>
         </div>
     </header>
 
-    <!-- Hero Section -->
     <section id="hero">
+        <div class="parallax-bg"></div>
+        <div class="particles"></div>
         <div class="container">
-            <h2 id="hero-description" data-i18n="hero-description">Экономь топливо и деньги</h2>
-            <a href="assets/apk/FuelMaster.apk" class="btn primary">
-                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo">
-                <span data-i18n="download-apk">Скачать APK</span>
-            </a>
-            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary">
-                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo">
-                <span data-i18n="source-code">Исходный код</span>
-            </a>
+            <h1 id="hero-title" data-i18n="hero-title">Управляй расходом топлива с умом</h1>
+            <p id="hero-subtitle" data-i18n="hero-subtitle">FuelMaster — комплексное приложение для отслеживания автомобилей, расчета топлива и полезных советов.</p>
+            <a href="#download" class="btn primary"><i class="fas fa-download animated-icon"></i> <span id="download-text" data-i18n="download-text">Скачать</span></a>
+            <div class="seasonal-banner" id="seasonal-banner" data-i18n="seasonal-banner">
+                Осенние обновления 2025: Улучшенный расчет и новые советы по экономии до 30 сентября! <span id="countdown"></span>
+            </div>
         </div>
     </section>
 
-    <!-- Screenshots Section -->
+    <section id="calculator">
+        <div class="container">
+            <h2 id="calculator-title" data-i18n="calculator-title">Рассчитайте расход топлива</h2>
+            <div class="calculator-form">
+                <input type="number" id="start-mileage" placeholder="Начальный пробег (км)" min="0" data-i18n="start-mileage">
+                <input type="number" id="end-mileage" placeholder="Конечный пробег (км)" min="0" data-i18n="end-mileage">
+                <input type="number" id="start-fuel" placeholder="Топливо в баке на начало (л)" min="0" data-i18n="start-fuel">
+                <input type="number" id="highway-km" placeholder="Км по трассе" min="0" data-i18n="highway-km">
+                <button id="calculate-btn" data-i18n="calculate-btn">Рассчитать</button>
+                <p id="total-mileage"></p>
+                <p id="result"></p>
+            </div>
+        </div>
+    </section>
+
+    <section id="features">
+        <div class="container">
+            <h2 id="features-title" data-i18n="features-title">Основные возможности</h2>
+            <div class="feature-grid">
+                <div class="feature-card">
+                    <i class="fas fa-car animated-icon"></i>
+                    <h3 id="feature1-title" data-i18n="feature1-title">Управление авто</h3>
+                    <p id="feature1-desc" data-i18n="feature1-desc">Добавление, редактирование, удаление автомобилей с базой моделей из CSV.</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-gas-pump animated-icon"></i>
+                    <h3 id="feature2-title" data-i18n="feature2-title">Расчет расхода</h3>
+                    <p id="feature2-desc" data-i18n="feature2-desc">Учет города/трассы, погоды, кондиционера и других факторов.</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-chart-line animated-icon"></i>
+                    <h3 id="feature3-title" data-i18n="feature3-title">История и графики</h3>
+                    <p id="feature3-desc" data-i18n="feature3-desc">Хранение, фильтры и визуализация с fl_chart.</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-lock animated-icon"></i>
+                    <h3 id="feature4-title" data-i18n="feature4-title">Безопасность и премиум</h3>
+                    <p id="feature4-desc" data-i18n="feature4-desc">Firebase вход, синхронизация с Firestore для премиум.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="screenshots">
         <div class="container">
             <h2 id="screenshots-title" data-i18n="screenshots-title">Скриншоты</h2>
             <div class="gallery" id="screenshot-gallery">
-                <img src="assets/images/screenshot1-dark.png" 
-                     data-light="assets/images/screenshot1-light.png" 
-                     alt="Скриншот 1" onclick="openModal(this)">
-                <img src="assets/images/screenshot2-dark.png" 
-                     data-light="assets/images/screenshot2-light.png" 
-                     alt="Скриншот 2" onclick="openModal(this)">
-                <img src="assets/images/screenshot3-dark.png" 
-                     data-light="assets/images/screenshot3-light.png" 
-                     alt="Скриншот 3" onclick="openModal(this)">
-                <img src="assets/images/screenshot4-dark.png" 
-                     data-light="assets/images/screenshot4-light.png" 
-                     alt="Скриншот 4" onclick="openModal(this)">
+                <img src="assets/img/Screenshot-1-dark.jpg" alt="Скриншот 1" loading="lazy" data-light="assets/img/Screenshot-1-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-2-dark.jpg" alt="Скриншот 2" loading="lazy" data-light="assets/img/Screenshot-2-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-3-dark.jpg" alt="Скриншот 3" loading="lazy" data-light="assets/img/Screenshot-3-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-4-dark.jpg" alt="Скриншот 4" loading="lazy" data-light="assets/img/Screenshot-4-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-5-dark.jpg" alt="Скриншот 5" loading="lazy" data-light="assets/img/Screenshot-5-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-6-dark.jpg" alt="Скриншот 6" loading="lazy" data-light="assets/img/Screenshot-6-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-7-dark.jpg" alt="Скриншот 7" loading="lazy" data-light="assets/img/Screenshot-7-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-8-dark.jpg" alt="Скриншот 8" loading="lazy" data-light="assets/img/Screenshot-8-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-9-dark.jpg" alt="Скриншот 9" loading="lazy" data-light="assets/img/Screenshot-9-light.jpg" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-10-dark.jpg" alt="Скриншот 10" loading="lazy" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-11-dark.jpg" alt="Скриншот 11" loading="lazy" ondblclick="openModal(this)">
+                <img src="assets/img/Screenshot-12-dark.jpg" alt="Скриншот 12" loading="lazy" ondblclick="openModal(this)">
             </div>
         </div>
     </section>
 
-    <!-- Testimonials Section -->
     <section id="testimonials">
         <div class="container">
             <h2 id="testimonials-title" data-i18n="testimonials-title">Отзывы пользователей</h2>
-            <div class="testimonial">
-                <p id="testimonial-1" data-i18n="testimonial-1">Очень удобное приложение, помогает экономить топливо!</p>
-            </div>
-            <div class="testimonial">
-                <p id="testimonial-2" data-i18n="testimonial-2">FuelMaster — лучший помощник в дороге!</p>
+            <div class="testimonial-grid">
+                <div class="testimonial-card">
+                    <p id="testimonial1-text" data-i18n="testimonial1-text">"Отлично помогает экономить топливо!"</p>
+                    <span id="testimonial1-author" data-i18n="testimonial1-author">— Иван, Москва</span>
+                    <div class="stars">★★★★★</div>
+                </div>
+                <div class="testimonial-card">
+                    <p id="testimonial2-text" data-i18n="testimonial2-text">"Простое и удобное приложение!"</p>
+                    <span id="testimonial2-author" data-i18n="testimonial2-author">— Ольга, Санкт-Петербург</span>
+                    <div class="stars">★★★★☆</div>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Calculator Section -->
-    <section id="calculator">
+    <section id="download">
         <div class="container">
-            <h2 id="calc-title" data-i18n="calc-title">Калькулятор топлива</h2>
-            <form id="calc-form">
-                <label for="start-km" data-i18n="start-km">Начальный пробег:</label>
-                <input type="number" id="start-km" required>
-
-                <label for="end-km" data-i18n="end-km">Конечный пробег:</label>
-                <input type="number" id="end-km" required>
-
-                <label for="fuel" data-i18n="fuel">Заправлено топлива (л):</label>
-                <input type="number" id="fuel" required>
-
-                <label for="highway" data-i18n="highway">Пробег по трассе (км):</label>
-                <input type="number" id="highway" required>
-
-                <button type="submit" class="btn primary" data-i18n="calculate">Рассчитать</button>
-            </form>
-
-            <div id="calc-result">
-                <p id="total" data-i18n="total">Всего пройдено: 0 км</p>
-                <p id="result" data-i18n="result">Введите данные для расчета</p>
-            </div>
+            <h2 id="download-title" data-i18n="download-title">Скачай FuelMaster</h2>
+            <p id="download-desc" data-i18n="download-desc">Доступно для Android и iOS. Установи прямо сейчас!</p>
+            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary" data-i18n="download-github">
+                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> 
+                <span>Исходный код</span>
+            </a>
+            <a href="#" class="btn primary" data-i18n="download-apk">
+                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> 
+                <span>Скачать APK</span>
+            </a>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
-            <p id="footer-text" data-i18n="footer-text">© 2025 FuelMaster. Все права защищены.</p>
+            <p>&copy; 2025 FuelMaster | <a href="https://github.com/maksimyugov89" target="_blank"><i class="fab fa-github"></i> maksimyugov89</a></p>
+            <a href="https://twitter.com/yourhandle" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
     </footer>
 
-    <!-- Modal for Screenshots -->
     <div id="modal" class="modal">
-        <span class="close-modal" onclick="closeModal()">&times;</span>
-        <div class="modal-content">
-            <button class="carousel-btn prev" onclick="prevImage()">&#10094;</button>
-            <img id="modal-img" src="" alt="">
-            <button class="carousel-btn next" onclick="nextImage()">&#10095;</button>
-            <p id="modal-caption"></p>
-        </div>
-    </div>
+       <span class="close-modal" onclick="closeModal()">&times;</span>
+         <button class="carousel-btn prev" onclick="prevImage()">&#10094;</button>
+                 <img id="modal-img" src="" alt="Увеличенное изображение">
+         <button class="carousel-btn next" onclick="nextImage()">&#10095;</button>
+    <p id="modal-caption"></p>
+</div>
 
-    <!-- Scripts -->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
