--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <span id="theme-text" data-i18n="themeLight">Светлая</span>
                     </button>
                 </div>
+                <div id="weather-info"></div>
             </div>
         </div>
     </header>
