--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
             <h2 id="download-title" data-i18n="download-title">Скачай FuelMaster</h2>
             <p id="download-desc" data-i18n="download-desc">Доступно для Android и iOS. Установи прямо сейчас!</p>
             <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary" data-i18n="download-github">
-                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> 
+                <img src="assets/img/logo.png" alt="Logo" class="download-logo"> 
                 <span>Исходный код</span>
             </a>
             <a href="#" class="btn primary" data-i18n="download-apk">
-                <img src="assets/img/logo.PNG" alt="Logo" class="download-logo"> 
+                <img src="assets/img/logo.png" alt="Logo" class="download-logo"> 
                 <span>Скачать APK</span>
             </a>
         </div>
