--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
                                min="0" step="0.1" data-i18n="highway-km">
                         <span id="highway-km-error" class="error-message" role="alert"></span>
                     </div>
+
+                    <div class="input-group">
+                        <label for="fuel-price" class="sr-only">Цена топлива за литр</label>
+                        <input type="number" id="fuel-price" placeholder="Цена топлива (руб/л)" 
+                               min="0" step="0.1" data-i18n="fuel-price">
+                        <span id="fuel-price-error" class="error-message" role="alert"></span>
+                    </div>
                     
                     <button type="button" id="calculate-btn" data-i18n="calculate-btn" 
                             aria-describedby="calculation-result">Рассчитать</button>
