--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <section id="download" aria-labelledby="download-title">
             <div class="container">
                 <h2 id="download-title" data-i18n="download-title">Скачай FuelMaster</h2>
-                <p id="download-desc" data-i18n="download-desc" id="download-description">Доступно для Android и iOS. Установи прямо сейчас!</p>
+                <p id="download-desc" data-i18n="download-desc" aria-describedby="download-description">Доступно для Android и iOS. Установи прямо сейчас!</p>
                 <div class="download-buttons">
                     <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary" 
                        data-i18n="download-github" target="_blank" rel="noopener noreferrer"
