--- a/index.html
+++ b/index.html
@@ -200,48 +200,48 @@
         </section>
 
         <section id="screenshots" aria-labelledby="screenshots-title">
-        <div class="container">
-            <h2 id="screenshots-title" data-i18n="screenshots-title">Скриншоты</h2>
-            <div class="gallery" id="screenshot-gallery" role="group" aria-label="Галерея скриншотов приложения">
-                <img src="assets/img/Screenshot-1-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-1-light.jpg" data-dark="assets/img/Screenshot-1-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-2-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-2-light.jpg" data-dark="assets/img/Screenshot-2-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-3-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-3-light.jpg" data-dark="assets/img/Screenshot-3-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-4-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-4-light.jpg" data-dark="assets/img/Screenshot-4-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-5-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-5-light.jpg" data-dark="assets/img/Screenshot-5-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-6-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-6-light.jpg" data-dark="assets/img/Screenshot-6-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-7-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-7-light.jpg" data-dark="assets/img/Screenshot-7-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-8-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-8-light.jpg" data-dark="assets/img/Screenshot-8-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-9-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-9-light.jpg" data-dark="assets/img/Screenshot-9-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-10-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-10-light.jpg" data-dark="assets/img/Screenshot-10-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-11-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-11-light.jpg" data-dark="assets/img/Screenshot-11-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-                <img src="assets/img/Screenshot-12-dark.jpg" alt="Скриншот приложения FuelMaster" 
-                     loading="lazy" data-light="assets/img/Screenshot-12-light.jpg" data-dark="assets/img/Screenshot-12-dark.jpg" 
-                     tabindex="0" role="button" aria-label="Открыть изображение">
-             </div>
-          </div>
-      </section>
+            <div class="container">
+                <h2 id="screenshots-title" data-i18n="screenshots-title">Скриншоты</h2>
+                <div class="gallery" id="screenshot-gallery" role="group" aria-label="Галерея скриншотов приложения">
+                    <img src="assets/img/Screenshot-1-dark.jpg" alt="Скриншот главного экрана приложения FuelMaster" 
+                         loading="lazy" data-light="assets/img/Screenshot-1-light.jpg" data-dark="assets/img/Screenshot-1-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-2-dark.jpg" alt="Скриншот калькулятора расхода топлива" 
+                         loading="lazy" data-light="assets/img/Screenshot-2-light.jpg" data-dark="assets/img/Screenshot-2-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-3-dark.jpg" alt="Скриншот списка автомобилей" 
+                         loading="lazy" data-light="assets/img/Screenshot-3-light.jpg" data-dark="assets/img/Screenshot-3-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-4-dark.jpg" alt="Скриншот добавления нового автомобиля" 
+                         loading="lazy" data-light="assets/img/Screenshot-4-light.jpg" data-dark="assets/img/Screenshot-4-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-5-dark.jpg" alt="Скриншот истории поездок" 
+                         loading="lazy" data-light="assets/img/Screenshot-5-light.jpg" data-dark="assets/img/Screenshot-5-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-6-dark.jpg" alt="Скриншот графиков расхода топлива" 
+                         loading="lazy" data-light="assets/img/Screenshot-6-light.jpg" data-dark="assets/img/Screenshot-6-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-7-dark.jpg" alt="Скриншот настроек приложения" 
+                         loading="lazy" data-light="assets/img/Screenshot-7-light.jpg" data-dark="assets/img/Screenshot-7-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-8-dark.jpg" alt="Скриншот профиля пользователя" 
+                         loading="lazy" data-light="assets/img/Screenshot-8-light.jpg" data-dark="assets/img/Screenshot-8-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-9-dark.jpg" alt="Скриншот советов по экономии топлива" 
+                         loading="lazy" data-light="assets/img/Screenshot-9-light.jpg" data-dark="assets/img/Screenshot-9-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-10-dark.jpg" alt="Скриншот уведомлений" 
+                         loading="lazy" data-light="assets/img/Screenshot-10-light.jpg" data-dark="assets/img/Screenshot-10-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-11-dark.jpg" alt="Скриншот экспорта данных" 
+                         loading="lazy" data-light="assets/img/Screenshot-11-light.jpg" data-dark="assets/img/Screenshot-11-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                    <img src="assets/img/Screenshot-12-dark.jpg" alt="Скриншот темной темы приложения" 
+                         loading="lazy" data-light="assets/img/Screenshot-12-light.jpg" data-dark="assets/img/Screenshot-12-dark.jpg" 
+                         tabindex="0" role="button" aria-label="Открыть изображение в полном размере">
+                </div>
+            </div>
+        </section>
 
         <section id="testimonials" aria-labelledby="testimonials-title">
             <div class="container">
