--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <article class="feature-card">
                         <i class="fas fa-chart-line animated-icon" aria-hidden="true"></i>
                         <h3 id="feature3-title" data-i18n="feature3-title">История и графики</h3>
-                        <p id="feature3-desc" data-i18n="feature3-desc">Хранение, фильтры и визуализация с fl_chart.</p>
+                        <p id="feature3-desc" data-i18n="feature3-desc">Хранение, фильтры и визуализация с <span class="tech-term">fl_chart</span></p>
                     </article>
                     <article class="feature-card">
                         <i class="fas fa-lock animated-icon" aria-hidden="true"></i>
